samples/_failures_safe/1761303115_2ee469_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c48a69da.c: In function ‘main’:
./samples/SAFE/__tmp_c48a69da.c:164:5: error: expected expression at end of input
  164 |     if (scanf("%d", &start) !=
      |     ^~
./samples/SAFE/__tmp_c48a69da.c:164:5: error: expected declaration or statement at end of input
